# genif

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md  ThirdPartyLicenses.md  setup.py
demo/: demo.ipynb
docs/: example.html  genindex.html  index.html  objects.inv  py-modindex.html  pythonapi.html  pythonapi.rst  quickstart.html  quickstart.ipynb  search.html  searchindex.js  usage.html  usage.rst
docs/_sources/: index.rst.txt
docs/api/: class_view_hierarchy.html  classgenif_1_1BaggingEnsemble.html  classgenif_1_1GIFExitCondition.html  classgenif_1_1GIFExitConditionAverageKernelValue.html  classgenif_1_1GeneralizedIsolationForest.html  classgenif_1_1GeneralizedIsolationTree.html  classgenif_1_1Kernel.html  classgenif_1_1Learner.html  classgenif_1_1MaternKernel.html  classgenif_1_1RBFKernel.html  classgenif_1_1Tools.html  dir_src.html  dir_src_gif.html  dir_src_io.html  dir_src_kernels.html  file_src_BaggingEnsemble.h.html  file_src_Learner.h.html  file_src_OutlierDetectionResult.h.html  file_src_PythonBinding.cpp.html  file_src_Tools.h.html  file_src_gif_GIFExitCondition.h.html  file_src_gif_GIFModel.h.html  file_src_gif_GeneralizedIsolationForest.h.html  file_src_gif_GeneralizedIsolationTree.h.html  file_src_gif_Tree.h.html  file_src_io_DataTypeHandling.h.html  file_src_kernels_Kernel.h.html  file_src_kernels_MaternKernel.h.html  file_src_kernels_RBFKernel.h.html  file_view_hierarchy.html  library_root.html  namespace_genif.html  (+24 more)
docsrc/: conf.py  example.ipynb  index.rst  usage.rst
genif/: BaggingEnsemble.h  Learner.h  OutlierDetectionResult.h  PythonBinding.cpp
genif/gif/: GIFModel.h  (+4 more)
src/: BaggingEnsemble.h  Learner.h  OutlierDetectionResult.h  PythonBinding.cpp  Tools.h
(+65 files in other folders)
